[gd_scene load_steps=12 format=3 uid="uid://duovv46vol6ei"]

[ext_resource type="Script" path="res://lobby.gd" id="1_vsfjm"]
[ext_resource type="Script" path="res://Menu.gd" id="2_th5ay"]
[ext_resource type="Texture2D" uid="uid://dkr1lnx7cg8v3" path="res://textures/stones/asteroid/asteroid_base.png" id="3_onh2u"]
[ext_resource type="Texture2D" uid="uid://lcc7mv1n22m8" path="res://textures/stones/asteroid/asteroid_height.png" id="4_pdyl6"]
[ext_resource type="Texture2D" uid="uid://mpy64gqccicu" path="res://textures/stones/asteroid/asteroid_normal.png" id="5_m0lrn"]
[ext_resource type="Texture2D" uid="uid://bskotplrldldl" path="res://textures/stones/asteroid/asteroid_rough.png" id="6_qip4i"]
[ext_resource type="Texture2D" uid="uid://m23uiu0nx2bg" path="res://textures/stones/asteroid/space.png" id="7_vcpge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vxu1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_yyumw"]

[sub_resource type="SphereMesh" id="SphereMesh_73clj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hrjhd"]
albedo_texture = ExtResource("3_onh2u")
roughness_texture = ExtResource("6_qip4i")
normal_enabled = true
normal_texture = ExtResource("5_m0lrn")
heightmap_enabled = true
heightmap_texture = ExtResource("4_pdyl6")
texture_filter = 2

[node name="lobby" type="Node"]
script = ExtResource("1_vsfjm")

[node name="Menu" type="Node3D" parent="."]
script = ExtResource("2_th5ay")

[node name="CanvasLayer" type="CanvasLayer" parent="Menu"]

[node name="PanelContainer" type="PanelContainer" parent="Menu/CanvasLayer"]
texture_filter = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7vxu1")

[node name="MarginContainer" type="MarginContainer" parent="Menu/CanvasLayer/PanelContainer"]
texture_filter = 3
layout_mode = 2
theme = SubResource("Theme_yyumw")
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 203
theme_override_constants/margin_right = 400

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1

[node name="UsernameEntry" type="LineEdit" parent="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="AddressEntry" type="LineEdit" parent="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Address to Join"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="OptionButton" type="OptionButton" parent="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host
"

[node name="JoinButton" type="Button" parent="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="Planet" type="MeshInstance3D" parent="Menu"]
transform = Transform3D(-1.13296e-06, -25.9192, 0, 25.9192, -1.13296e-06, 0, 0, 0, 25.9192, 0, -12.7445, -1.94029)
mesh = SubResource("SphereMesh_73clj")
surface_material_override/0 = SubResource("StandardMaterial3D_hrjhd")

[node name="Camera3D" type="Camera3D" parent="Menu"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.0374, 5.61829)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Menu"]
transform = Transform3D(0.516855, 0.838262, -0.17372, -0.823305, 0.542336, 0.167453, 0.234584, 0.0564755, 0.970454, -58.3308, 21.9219, 25.5486)

[node name="Space" type="Sprite3D" parent="Menu"]
transform = Transform3D(31.8802, 0, 0, 0, 31.8802, 0, 0, 0, 31.8802, 0, 2.45077, -21.7165)
modulate = Color(0.121569, 0.121569, 0.121569, 1)
texture = ExtResource("7_vcpge")

[node name="World" type="Node3D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn", "res://test_enemy.tscn", "res://boss_arena_test.tscn")
spawn_path = NodePath("..")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]

[connection signal="text_changed" from="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/UsernameEntry" to="." method="_on_username_entry_text_changed"]
[connection signal="text_changed" from="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/AddressEntry" to="." method="_on_address_entry_text_changed"]
[connection signal="item_selected" from="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Menu/CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
